WebRTC settings configuration fixes; CSS aligned for Ent skin

--- a/webapp/src/main/webapp/skin/webconferencing-enterprise.css
+++ b/webapp/src/main/webapp/skin/webconferencing-enterprise.css
@@ -29,25 +29,34 @@
 	box-shadow: none !important;
 }
 
-.transparentButton .callButtonTitle {
-	color: #ffffff;
-}
-
 /* Call button is more narrow in spaces */
 .callButton.spaceCall {
 	padding: 1px 5px !important;
 	font-size: 12px;
-	line-height: 24px;
+	line-height: 24px;	
+	margin-top: 2px;
 }
 
-.spaceCall > i, .spaceCall > .callButtonTitle {
+.spaceCall > [class^="uiIcon"], 
+.spaceCall > .callButtonIconVideo, 
+.spaceCall > .callButtonTitle, 
+.spaceCall > .callTitle,
+.spaceCall > .uiIconMiniArrowDown:before {
 	color: #ffffff;
 }
 
-.spaceCall:hover > i, .spaceCall:hover  > .callButtonTitle {
-	color: inherit;
+.spaceCall:hover > [class^="uiIcon"], 
+.spaceCall:hover > .callButtonIconVideo, 
+.spaceCall:hover > .callButtonTitle, 
+.spaceCall:hover > .callTitle,
+.spaceCall:hover > .uiIconMiniArrowDown:before {
+	color: #ffffff !important;
 }
 
 #UIBreadCrumbsNavigationPortlet .callButtonContainer {
-	padding-top: 3px;
+	/*padding-top: 3px;*/
+}
+
+.callButtonIconVideo {
+	top: 3px;
 }
